# tpre

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  bench.cpp  build.sh  build_example.sh  creflect.py  example.c  jit.c  meson.build  runtime.c  shared.h  slowarr.h  test.c  test.sh  tpre.c  tpre.h
compiler/: compiler.c  fsm.c  lexer.c  lexer.h  options.c  parser.c  parser.h  re2fsm.c  utils.c  utils.h
include/: tpre.h  tpre_common.h  tpre_compiler.h  tpre_runtime.h
test-cases/: 000_EgrepLiterals_Lowercase.json  001_EgrepLiterals_Lowercase.json  002_EgrepLiterals_Lowercase.json  003_EgrepLiterals_Lowercase.json  004_EgrepLiterals_MixedCase.json  005_EgrepLiterals_MixedCase.json  006_EgrepLiterals_MixedCase.json  007_EgrepLiterals_MixedCase.json  008_EgrepLiterals_FoldCase.json  009_EgrepLiterals_FoldCase.json  010_EgrepLiterals_FoldCase.json  011_EgrepLiterals_FoldCase.json  012_EgrepLiterals_UTF8.json  013_EgrepLiterals_UTF8.json  014_EgrepLiterals_UTF8.json  015_EgrepLiterals_UTF8.json  017_Repetition_Simple.json  020_EmptyString_Exhaustive.json  021_Punctuation_Literals.json  022_LineEnds_Exhaustive.json  023_CharacterClasses_Exhaustive.json  024_CharacterClasses_ExhaustiveAB.json  026_InterestingUTF8_AB.json  CharacterClasses_Exhaustive.json  CharacterClasses_ExhaustiveAB.json  EgrepLiterals_FoldCase.json  EgrepLiterals_Lowercase.json  EgrepLiterals_MixedCase.json  EgrepLiterals_UTF8.json  EmptyString_Exhaustive.json  InterestingUTF8_AB.json  InterestingUTF8_SingleOps.json  LineEnds_Exhaustive.json  Punctuation_Literals.json  Repetition_Capturing.json  Repetition_Simple.json
testing/: run.c
testing/test-cases/: LICENSE
testing/test-cases/test-cases/: 004_EgrepLiterals_MixedCase.json  006_EgrepLiterals_MixedCase.json  007_EgrepLiterals_MixedCase.json  009_EgrepLiterals_FoldCase.json  010_EgrepLiterals_FoldCase.json  011_EgrepLiterals_FoldCase.json  012_EgrepLiterals_UTF8.json  016_Repetition_Simple.json  018_Repetition_Capturing.json  019_Repetition_Capturing.json  024_CharacterClasses_ExhaustiveAB.json  025_InterestingUTF8_SingleOps.json
testing/test-cases/test-results/re2/: 020_EmptyString_Exhaustive.json  021_Punctuation_Literals.json
tests/: cartrain.c  char_classes.c  regression.c  repeats.c  testing.h
